After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 739005 - gtkstatusicon.c won't build with both X11 and Quartz backends on Mac OS X
gtkstatusicon.c won't build with both X11 and Quartz backends on Mac OS X
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkStatusIcon
3.14.x
Other Mac OS
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2014-10-22 12:41 UTC by Brion Vibber
Modified: 2014-10-27 01:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch against 3.14, applies to master as well (1.31 KB, patch)
2014-10-22 12:41 UTC, Brion Vibber
accepted-commit_now Details | Review

Description Brion Vibber 2014-10-22 12:41:36 UTC
Created attachment 289123 [details] [review]
patch against 3.14, applies to master as well

In the gtk_status_icon_set_tooltip_markup function there's an assumption that if X11 backend is present, Win32 and Quartz backends are not.

This breaks when building gtk+ with both X11 and Quartz backends, as a local variable doesn't get defined that gets used for the Quartz case.

Quick patch attached.
Comment 1 Matthias Clasen 2014-10-22 20:42:22 UTC
Review of attachment 289123 [details] [review]:

looks good for both master and gtk-3-14, thanks