Fix to gtkstatusicon.c to allow building both X11 and Quartz backends

https://bugzilla.gnome.org/show_bug.cgi?id=739005